--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div class="header-container">
             <div class="header__logo">
                 <a href="#">
-                    <svg width="184" height="27" viewBox="0 0 184 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg viewBox="0 0 184 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M16.0136 21.0865H7.81939L6.38839 25.7644H0L9.09706 0.723712H14.7188L23.884 25.7644H17.4616L16.0136 21.0865ZM9.25038 16.4257H14.5826L11.908 7.74061L9.25038 16.4257Z"
                             fill="#656980" />
@@ -84,7 +84,7 @@
         <div class="features-container">
             <div class="feature__card">
                 <div class="feature__card__logo">
-                    <svg width="100.000000" height="100.000000" viewBox="0 0 100 100" fill="none"
+                    <svg viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs />
                         <path id="Vector"
@@ -108,7 +108,7 @@
             </div>
             <div class="feature__card">
                 <div class="feature__card__logo">
-                    <svg width="100.000000" height="100.000000" viewBox="0 0 100 100" fill="none"
+                    <svg viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs />
                         <path id="Vector"
@@ -132,7 +132,7 @@
             </div>
             <div class="feature__card">
                 <div class="feature__card__logo">
-                    <svg width="100.000000" height="100.000000" viewBox="0 0 100 100" fill="none"
+                    <svg viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs />
                         <path id="Vector"
@@ -159,7 +159,7 @@
             </div>
             <div class="feature__card">
                 <div class="feature__card__logo">
-                    <svg width="100.000000" height="100.000000" viewBox="0 0 100 100" fill="none"
+                    <svg viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs />
                         <path id="Vector"
@@ -174,7 +174,7 @@
             </div>
             <div class="feature__card">
                 <div class="feature__card__logo">
-                    <svg width="100.000000" height="101.388916" viewBox="0 0 100 101.389" fill="none"
+                    <svg viewBox="0 0 100 101.389" fill="none"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs />
                         <path id="Vector"
@@ -192,7 +192,7 @@
             </div>
             <div class="feature__card">
                 <div class="feature__card__logo">
-                    <svg width="100.000000" height="100.000000" viewBox="0 0 100 100" fill="none"
+                    <svg viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs />
                         <path id="Vector"
@@ -299,7 +299,7 @@
                 <div class="person-card__socials">
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -309,7 +309,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -319,7 +319,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -349,7 +349,7 @@
                 <div class="person-card__socials">
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -359,7 +359,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -369,7 +369,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -399,7 +399,7 @@
                 <div class="person-card__socials">
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -409,7 +409,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -419,7 +419,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -449,7 +449,7 @@
                 <div class="person-card__socials">
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -459,7 +459,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
@@ -469,7 +469,7 @@
                     </div>
                     <div class="social-logo">
                         <a href="#">
-                            <svg class="social-logo" width="39" height="39" viewBox="0 0 39 39" fill="none"
+                            <svg class="social-logo" viewBox="0 0 39 39" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <rect x="0.5" y="0.5" width="38" height="38" />
                                 <path
